Fixing nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ a {
 .navigation ul {
 	list-style: none;
 	padding-left: 0;
+	margin-bottom: 0;
 }
 
 .navigation ul li {
